Remove JVM warnings regarding PermSize and MaxPermSize.