@@ -66,7 +66,6 @@
 								<jvmArgs>
 									<jvmArg>-Xms128m</jvmArg>
 									<jvmArg>-Xmx512m</jvmArg>
-									<jvmArg>-XX:MaxPermSize=128m</jvmArg>
 								</jvmArgs>
 							</jvmSettings>
 						</configuration>
