@@ -294,7 +294,7 @@
 						<!-- MacOS specific option to run an SWT application from the command line.
 								See http://www.eclipse.org/swt/faq.php#carbonapp
 						-->
-						<argLine>${os-jvm-flags} -Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=512m ${surefireArgLine}</argLine>
+						<argLine>${os-jvm-flags} -Xmx1024m ${surefireArgLine}</argLine>
 					</configuration>
 				</plugin>
 
@@ -353,7 +353,7 @@
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>2.15</version>
 					<configuration>
-						<argLine>-Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=512m ${surefireArgLine}</argLine>
+						<argLine>-Xmx1024m ${surefireArgLine}</argLine>
 					</configuration>
 				</plugin>
 				<plugin>
@@ -591,7 +591,7 @@
 				</os>
 			</activation>
 			<properties>
-				<ui.test.vmargs>-Xmx512m -XX:MaxPermSize=256m -XstartOnFirstThread</ui.test.vmargs>
+				<ui.test.vmargs>-Xmx512m -XstartOnFirstThread</ui.test.vmargs>
 			</properties>
 		</profile>
 		<profile>
@@ -603,7 +603,7 @@
 				</os>
 			</activation>
 			<properties>
-				<ui.test.vmargs>-Xmx512m -XX:MaxPermSize=256m</ui.test.vmargs>
+				<ui.test.vmargs>-Xmx512m</ui.test.vmargs>
 			</properties>
 		</profile>
 	-->
